--- a/main.html
+++ b/main.html
@@ -7,6 +7,29 @@
 </head>
 
 <body>
+	  <table aria-label="Student roll numbers and names">
+    <caption>Class Roll List</caption>
+
+    <thead>
+      <tr>
+        <th scope="col">Roll number</th>
+        <th scope="col">Name</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Aisha Khan</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Ravi Patel</td>
+      </tr>
+      <!-- Add more rows as needed -->
+    </tbody>
+  </table>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
